Modify routes in order controller
